--- a/ui/package.json
+++ b/ui/package.json
@@ -134,7 +134,7 @@
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-junit-reporter": "1.2.0",
     "lint-staged": "12.0.2",
-    "ng-packagr": "^16.2.0",
+    "ng-packagr": "16.2.3",
     "style-loader": "3.3.3",
     "ts-node": "8.3.0",
     "typescript": "4.9.5",
