--- a/tests/08_v2_manual_run.yml
+++ b/tests/08_v2_manual_run.yml
@@ -145,7 +145,7 @@ testcases:
     - name: Check commit
       script: "cat {{.cds_workflow}}-1-1-init-gitvariables && cat {{.cds_workflow}}-1-1-init-gitvariables | grep \"{{.Push-workflow-file.commitToRun}}\""
     - name: Check that newstep is not here
-      script: ls {{.cds_workflow}}-1-1-init*.yml | wc -l
+      script: find . -name "{{.cds_workflow}}-1-1-init*.yml" | wc -l
       assertions:
         - result.systemout ShouldEqual "2" 
    
