--- a/tests/08_v2_manual_run.yml
+++ b/tests/08_v2_manual_run.yml
@@ -1,8 +1,8 @@
-name: Checkout plugin
+name: Manual run
 vars:
-  cds_project: "ITV2CHECKOUT"
-  git_repo: "it_v2_checkout"
-  cds_workflow: "WorkflowCheckout"
+  cds_project: "ITV2MANUAL"
+  git_repo: "it_v2_manual"
+  cds_workflow: "WorkflowManual"
   worker_model: "{{.cds_project}}/my_vcs_server/{{.git.user}}/{{.git_repo}}/docker-debian"
 
 testcases:
@@ -60,12 +60,9 @@ testcases:
             image: buildpack-deps:buster
         workflows/checkout.yaml:
           name: {{.cds_workflow}}
-          on: [push]
           jobs:
             init:
-              runs-on: 
-                model: "{{.worker_model}}"
-                memory: 2048
+              runs-on: "{{.worker_model}}"
               steps:
                 - id: checkout
                   uses: actions/checkout
@@ -74,21 +71,59 @@ testcases:
                     #!/bin/bash -x
                     env | grep GIT
 
-    - name: Trigger manually an analysis
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis trigger {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
-      assertions:
-        - result.systemoutjson.status ShouldEqual "InProgress"
-
     - name: Check CDS project analyses status
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
+      assertions:
+        - result.systemoutjson ShouldHaveLength 2
+        - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
+        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
+      retry: 10
+      delay: 12
+
+    - name: Save current git commit
+      script: cd /tmp/repos/{{.git_repo}} && git rev-parse HEAD
+      vars:
+        commitToRun:
+          from: result.systemout
+
+- name: Update workflow
+  steps:
+    - type: v2_push_files_on_repo
+      git_repo: "{{.git_repo}}"
+      git_host: "{{.git.host}}"
+      git_user: "{{.git.user}}"
+      git_email: "{{.Prepare-test.emailaddress}}"
+      git_password: "{{.git.password}}"
+      gpg_key_id: "{{.gpg.key_id}}"
+      files:
+        workflows/checkout.yaml:
+          name: {{.cds_workflow}}
+          jobs:
+            init:
+              runs-on: "{{.worker_model}}"
+              steps:
+                - id: checkout
+                  uses: actions/checkout
+                - id: gitvariables
+                  run: |-
+                    #!/bin/bash -x
+                    env | grep GIT  
+                - id: newstep
+                  run: exit 1
+
+    - name: Check CDS project analyses status after update
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
       assertions:
         - result.systemoutjson ShouldHaveLength 3
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"
-      retry: 20
-      delay: 5
+        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success" 
+        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"    
+      retry: 10
+      delay: 12                   
 
+    - name: Run workflow on previous commit
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --branch master --commit {{.Push-workflow-file.commitToRun}}"
+   
     - name: Check that the CDS workflow has at least one execution and is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
       assertions:
@@ -107,39 +142,6 @@ testcases:
       script: "cat {{.cds_workflow}}-1-1-init-checkout | grep \"Checkout completed\""
     - name: Check checkout log content 2
       script: "cat {{.cds_workflow}}-1-1-init-checkout && cat {{.cds_workflow}}-1-1-init-checkout | grep \"Checkout branch master\""  
-
-    - name: Check gitvariables log content to check SEMVER variables are available
-      script: "cat {{.cds_workflow}}-1-1-init-gitvariables | grep SEMVER"
-
-    - name: Create and push a tag
-      script: cd /tmp/repos/{{.git_repo}} && git tag -s -u {{.gpg.key_id}} v0.1.0 -m "Creating tag v.0.1.0" && git push --tags
-
-    - name: Check CDS project analyses status for tag
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
-      assertions:
-        - result.systemoutjson ShouldHaveLength 3
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Skipped"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
-        - result.systemoutjson.systemoutjson2.status ShouldEqual "Success"
-      retry: 20
-      delay: 5   
-
-    - name: Check that the CDS workflow has 2 executions and are Success
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
-      assertions:
-        - result.systemoutjson ShouldHaveLength 2
-        - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
-        - result.systemoutjson.systemoutjson1.status ShouldEqual "Success"
-      retry: 30
-      delay: 5
-      vars:
-        runIdentifier:
-          from: result.systemoutjson.systemoutjson0.id
-
-    - name: Download logs
-      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.runIdentifier}}
-
-    - name: Check checkout tag log content
-      script: "cat {{.cds_workflow}}-2-1-init-checkout | grep \"Checkout completed\""
-    - name: Check checkout tag log content 2
-      script: "cat {{.cds_workflow}}-2-1-init-checkout && cat {{.cds_workflow}}-2-1-init-checkout | grep \"Checkout tag v0.1.0\""
+    - name: Check commit
+      script: "cat {{.cds_workflow}}-1-1-init-gitvariables && cat {{.cds_workflow}}-1-1-init-gitvariables | grep \"{{.Push-workflow-file.commitToRun}}\""
+   
