--- a/tests/08_v2_sub_action.yml
+++ b/tests/08_v2_sub_action.yml
@@ -107,14 +107,14 @@ testcases:
       retry: 20
       delay: 5
       vars:
-        runIdentifier:
+        workflowRunID:
           from: result.systemoutjson.systemoutjson0.id
 
     - name: Get Workflow run info
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.runIdentifier}}"
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info {{.cds_project}} {{.workflowRunID}}"
         
     - name: Download logs
-      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.runIdentifier}}
+      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}
     - name: Display log
       script: cat {{.cds_workflow}}-1-1-init-action
     - name: Check log content
