--- a/tests/lib/v2_add_git_repo.yml
+++ b/tests/lib/v2_add_git_repo.yml
@@ -41,13 +41,11 @@ steps:
   - script: >
       {{.input.cdsctl_command}} experimental project repository add {{.input.cds_project}} my_vcs_server {{.input.git_user}}/{{.input.git_repo}}
   - script: >
-      {{.input.cdsctl_command}} experimental project repository list {{.input.cds_project}} --vcs-name my_vcs_server --format json
+      {{.input.cdsctl_command}} experimental project repository list {{.input.cds_project}} --vcs-name my_vcs_server --filter reponame={{.input.git_user}}/{{.input.git_repo}} --format json
     assertions:
       - and:
         - result.code ShouldEqual 0
-        - or:
-          - result.systemoutjson.systemoutjson0.reponame ShouldEqual "{{.input.git_user}}/{{.input.git_repo}}"
-          - result.systemoutjson.systemoutjson0.repoName ShouldEqual "{{.input.git_user}}/{{.input.git_repo}}"
+        - result.systemoutjson.systemoutjson0.reponame ShouldEqual "{{.input.git_user}}/{{.input.git_repo}}"
 
   # Add webhook
   - script: {{.input.cdsctl_command}} experimental project repository hook-key {{.input.cds_project}} gitea my_vcs_server {{.input.git_user}}/{{.input.git_repo}} --format json
