--- a/tests/08_v2_workflow_generic_artifacts.yml
+++ b/tests/08_v2_workflow_generic_artifacts.yml
@@ -122,7 +122,7 @@ testcases:
       - result.systemoutjson ShouldHaveLength 2
 
   - name: Download result
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result get {{.cds_project}} {{.runIdentifier}} --pattern generic:* --format json"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result get {{.cds_project}} {{.runIdentifier}} --pattern generic:*"
 
   - name: Check file foo 
     script: "cat foo.txt && cat foo.txt | grep \"foobar\""
