fix(api,cli,doc): add ui url + update doc (#6924)

--- a/tests/08_v2_workflow_on_pullrequest.yml
+++ b/tests/08_v2_workflow_on_pullrequest.yml
@@ -181,4 +181,4 @@ testcases:
         - result.statuscode ShouldEqual 200
         - result.bodyjson.statuses ShouldHaveLength 1
         - result.bodyjson.statuses.statuses0.status ShouldEqual "success"
-        - result.bodyjson.statuses.statuses0.context ShouldEqual "ITV2WFNOTIF-WorkflowNotificationsLog"
+        - "result.bodyjson.statuses.statuses0.context ShouldEqual \"ITV2WFNOTIF-WorkflowNotificationsLog #1\""
