--- a/tests/08_v2_distant_workflow.yml
+++ b/tests/08_v2_distant_workflow.yml
@@ -96,7 +96,7 @@ testcases:
             init:
               runs-on: 
                 model: "{{.worker_model}}"
-                memory: 2048
+                memory: "2048"
               steps:
                 - id: gitinfo
                   run: env
