--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -198,6 +198,16 @@ testcases:
                   package: quicksample
                   version: 0.0.1
                   wheel: "true"
+          PromoteAndRelease:
+            needs: [Debian-Job, Python-Job, Helm-Job]
+            runs-on: "{{.worker_model}}"
+            steps:
+              - uses: actions/artifactoryPromote
+                with:
+                  artifacts: python:* helm:* debian:*
+              - uses: actions/artifactoryRelease
+                with:
+                  artifacts: python:* helm:* debian:*
   - name: Check CDS project analyses
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental project analysis list {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} --format json"
     assertions:
@@ -253,4 +263,8 @@ testcases:
   - name: Check that we have 1 run result of type helm
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=helm --format json"  
     assertions:
-      - result.systemoutjson ShouldHaveLength 1   
+      - result.systemoutjson ShouldHaveLength 1
+  - name: Check that we have 1 run result of type release
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=release --format json"  
+    assertions:
+      - result.systemoutjson ShouldHaveLength 1       
