fix: create file in repo

--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -120,21 +120,14 @@ testcases:
         Hello
       ../setup.py: |
         import setuptools
-        with open("README.md", "r") as fh:
-          long_description = fh.read()
         setuptools.setup(
           name="quicksample",
           version="0.0.1",
           author="sgu",
           description="Quicksample Test Package",
-          long_description=long_description,
+          long_description=coucou,
           long_description_content_type="text/markdown",
           packages=setuptools.find_packages(),
-          classifiers=[
-            "Programming Language :: Python :: 3",
-            "License :: OSI Approved :: MIT License",
-            "Operating System :: OS Independent",
-          ],
           python_requires='>=3.6',
           py_modules=["quicksample"],
           package_dir={'':'quicksample/src'},
