--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -250,6 +250,12 @@ testcases:
   - name: Download logs
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.workflowRunID}}"    
 
+  - name: Get run info
+    script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow info ls {{.cds_project}} {{.workflowRunID}}"     
+
+  - name: Get job info
+    script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}}"       
+
   - name: Display logs
     script: cat {{.cds_workflow}}-*    
 
