--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -237,12 +237,18 @@ testcases:
   - name: Check that the CDS workflow has at least one execution and is Success
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA --format json"
     assertions:
-      - result.systemoutjson ShouldHaveLength 1
+      - and: 
+        - result.systemoutjson ShouldHaveLength 1
+        - or:
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Success
+          - result.systemoutjson.systemoutjson0.status ShouldEqual Fail
     retry: 30
     delay: 5
     vars:
       workflowRunID:
         from: result.systemoutjson.systemoutjson0.id
+      workflowRunStatus:  
+        from: result.systemoutjson.systemoutjson0.status
 
   - name: List all run results
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}}"      
@@ -257,7 +263,9 @@ testcases:
     script:  "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs status {{.cds_project}} {{.workflowRunID}}"       
 
   - name: Display logs
-    script: cat {{.cds_workflow}}-*    
+    script: cat {{.cds_workflow}}-*
+    assertions:
+    - workflowRunStatus ShouldEqual Success
 
   - name: Check that we have 2 run results of type python
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=python --format json"  
