--- a/tests/lib/v2_push_files_on_repo.yml
+++ b/tests/lib/v2_push_files_on_repo.yml
@@ -23,10 +23,17 @@ steps:
       if echo "${directory}" | grep -q "/"
       then
         mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/$directory
-      fi  
-      /bin/bash -c cat | yq -P <<- 'EOF' > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
-      {{.value}}
+      fi 
+      firstChar=$(echo "{{.value}}" | cut -c1)
+
+      if echo "${firstChar}" | grep -q "{"
+      then
+        /bin/bash -c cat | yq -P <<- 'EOF' > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
+        {{.value}}
       EOF
+      else
+        echo "{{.value}}" >  /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
+      fi
   - script: cd /tmp/repos/{{.input.git_repo}} && git config user.name {{.input.git_user}} && git config user.email {{.input.git_email}}
   - script: cd /tmp/repos/{{.input.git_repo}} && git add --all
   - script: cd /tmp/repos/{{.input.git_repo}} && git commit --gpg-sign={{.input.gpg_key_id}} -m "add file and sign" --author "{{.input.git_user}} <{{.input.git_email}}>"
