fix: add new func

--- a/tests/08_v2_distant_workflow.yml
+++ b/tests/08_v2_distant_workflow.yml
@@ -54,7 +54,7 @@ testcases:
 
 - name: PushMyfile
   steps:
-    - type: v2_push_files_on_repo
+    - type: v2_push_cds_files_on_repo
       git_repo: "{{.git_repo_src}}"
       git_host: "{{.git.host}}"
       git_user: "{{.git.user}}"
@@ -72,7 +72,7 @@ testcases:
 
 - name: PushCode
   steps:
-    - type: v2_push_files_on_repo
+    - type: v2_push_cds_files_on_repo
       git_repo: "{{.git_repo_code}}"
       git_host: "{{.git.host}}"
       git_user: "{{.git.user}}"
