--- a/tests/08_v2_manual_run.yml
+++ b/tests/08_v2_manual_run.yml
@@ -44,7 +44,7 @@ testcases:
 
 - name: Push workflow file
   steps:
-    - type: v2_push_files_on_repo
+    - type: v2_push_cds_files_on_repo
       git_repo: "{{.git_repo}}"
       git_host: "{{.git.host}}"
       git_user: "{{.git.user}}"
@@ -88,7 +88,7 @@ testcases:
 
 - name: Update workflow
   steps:
-    - type: v2_push_files_on_repo
+    - type: v2_push_cds_files_on_repo
       git_repo: "{{.git_repo}}"
       git_host: "{{.git.host}}"
       git_user: "{{.git.user}}"
