--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -106,7 +106,7 @@ testcases:
 
 - name: Push workflow file
   steps:
-  - type: v2_push_files_on_repo
+  - type: v2_push_non_cds_files_on_repo
     git_repo: "{{.git_repo}}"
     git_host: "{{.git.host}}"
     git_user: "{{.git.user}}"
@@ -155,6 +155,14 @@ testcases:
         image:
           repository: nginx
           pullPolicy: IfNotPresent
+  - type: v2_push_cds_files_on_repo
+    git_repo: "{{.git_repo}}"
+    git_host: "{{.git.host}}"
+    git_user: "{{.git.user}}"
+    git_email: "{{.Prepare-test.emailaddress}}"
+    git_password: "{{.git.password}}"
+    gpg_key_id: "{{.gpg.key_id}}"
+    files:
       worker-models/debian.yaml:
         name: docker-debian
         description: my debian worker model
