--- a/tests/lib/v2_push_non_cds_files_on_repo.yml
+++ b/tests/lib/v2_push_non_cds_files_on_repo.yml
@@ -1,4 +1,4 @@
-executor: v2_push_files_on_repo
+executor: v2_push_non_cds_files_on_repo
 input:
   git_host: ""
   git_repo: ""
@@ -12,10 +12,6 @@ steps:
   # Git clone the repo
   - script: mkdir -p /tmp/repos/ && rm -rf /tmp/repos/{{.input.git_repo}}
   - script: git clone http://{{.input.git_user}}:{{.input.git_password}}@localhost:3000/{{.input.git_user}}/{{.input.git_repo}}.git /tmp/repos/{{.input.git_repo}}
-  - script: >
-      mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/workflows
-      mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/actions
-      mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/worker-models
   - range: {{.input.files}}
     script: |-
       pathToFile={{.key}}
@@ -24,16 +20,7 @@ steps:
       then
         mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/$directory
       fi 
-      firstChar={{.value | substr 0 1}}
-
-      if echo "${firstChar}" | grep -q "{"
-      then
-        /bin/bash -c cat | yq -P <<- 'EOF' > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
-        {{.value}}
-      EOF
-      else
-        echo "{{.value}}" >  /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
-      fi
+      echo "{{.value}}" > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
   - script: cd /tmp/repos/{{.input.git_repo}} && git config user.name {{.input.git_user}} && git config user.email {{.input.git_email}}
   - script: cd /tmp/repos/{{.input.git_repo}} && git add --all
   - script: cd /tmp/repos/{{.input.git_repo}} && git commit --gpg-sign={{.input.gpg_key_id}} -m "add file and sign" --author "{{.input.git_user}} <{{.input.git_email}}>"
