--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -114,12 +114,11 @@ testcases:
     git_password: "{{.git.password}}"
     gpg_key_id: "{{.gpg.key_id}}"
     files:
-      ../quicksample/src/quicksample.py: |
-        def quicktext():
-          print('Hello, welcome to QuickSample package.')
-      ../README.md: |
+      quicksample/src/quicksample.py: |
+        def quicktext():\n  print('Hello, welcome to QuickSample package.')
+      README.md: |
         Hello
-      ../setup.py: |
+      setup.py: |
         import setuptools
         setuptools.setup(
           name="quicksample",
@@ -134,14 +133,14 @@ testcases:
           package_dir={'':'quicksample/src'},
           install_requires=[]
         )
-      ../chart/Chart.yaml: |
+      chart/Chart.yaml:
         apiVersion: v2
         name: mychart
         description: A Helm chart for Kubernetes
         type: application
         version: 0.1.0
         appVersion: "1.16.0"
-      ../chart/templates/deployment.yaml:
+      chart/templates/deployment.yaml:
         apiVersion: apps/v1
         kind: Deployment
         metadata:
@@ -150,7 +149,7 @@ testcases:
           selector:
             matchLabels:
               helm.sh/chart: toto
-      ../chart/values.yaml:
+      chart/values.yaml:
         replicaCount: 1
         image:
           repository: nginx
