--- a/tests/lib/v2_push_non_cds_files_on_repo.yml
+++ b/tests/lib/v2_push_non_cds_files_on_repo.yml
@@ -18,9 +18,19 @@ steps:
       directory="${pathToFile%/*}"
       if echo "${directory}" | grep -q "/"
       then
-        mkdir -p /tmp/repos/{{.input.git_repo}}/.cds/$directory
+        mkdir -p /tmp/repos/{{.input.git_repo}}/$directory
       fi 
-      echo "{{.value}}" > /tmp/repos/{{.input.git_repo}}/.cds/{{.key}}
+
+      firstChar={{.value | substr 0 1}}
+      if echo "${firstChar}" | grep -q "{"
+      then
+        /bin/bash -c cat | yq -P <<- 'EOF' > /tmp/repos/{{.input.git_repo}}/{{.key}}
+        {{.value}}
+      EOF
+      else
+        echo "{{.value}}" > /tmp/repos/{{.input.git_repo}}/{{.key}}
+      fi
+
   - script: cd /tmp/repos/{{.input.git_repo}} && git config user.name {{.input.git_user}} && git config user.email {{.input.git_email}}
   - script: cd /tmp/repos/{{.input.git_repo}} && git add --all
   - script: cd /tmp/repos/{{.input.git_repo}} && git commit --gpg-sign={{.input.gpg_key_id}} -m "add file and sign" --author "{{.input.git_user}} <{{.input.git_email}}>"
