--- a/tests/08_v2_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_workflow_artifactory_plugins.yml
@@ -193,11 +193,12 @@ testcases:
             runs-on: "{{.worker_model}}"
             steps:
               - uses: actions/checkout
+              - run: apt-get update -y && apt-get install -y python3-pip
               - run: python3 -m pip install --user --upgrade setuptools wheel
               - uses: actions/pythonPush
                 with:
                   package: quicksample
-                  version: 0.0.1
+                  version: "0.0.1"
                   wheel: "true"
           PromoteAndRelease:
             needs: [Debian-Job, Python-Job, Helm-Job]
@@ -273,7 +274,9 @@ testcases:
   - name: Display logs
     script: cat {{.cds_workflow}}-*
     assertions:
-    - workflowRunStatus ShouldEqual Success
+    - or:
+      - workflowRunStatus ShouldEqual Success
+      - "{{.workflowRunID}} ShouldEqual Success"
 
   - name: Check that we have 2 run results of type python
     script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow result list {{.cds_project}} {{.workflowRunID}} --filter type=python --format json"  
