--- a/tests/08_v2_a_workflow_artifactory_plugins.yml
+++ b/tests/08_v2_a_workflow_artifactory_plugins.yml
@@ -179,7 +179,7 @@ testcases:
             steps:
               - uses: actions/checkout
               - run: apt-get update -y && apt-get install -y python3-pip python3-stdeb fakeroot python3-setuptools
-              - run: pip3 install stem stdeb
+              - run: pip3 install stem stdeb && sed -i 's/0.0.1/${{ git.semver_current }}/g' setup.py
               - run: python3 setup.py --command-packages=stdeb.command bdist_deb
               - uses: actions/debianPush
                 with:
@@ -194,12 +194,12 @@ testcases:
             steps:
               - uses: actions/checkout
               - run: apt-get update -y && apt-get install -y python3-pip python3-setuptools
-              - run: python3 -m pip install --user --upgrade setuptools wheel
+              - run: python3 -m pip install --user --upgrade setuptools wheel && sed -i 's/0.0.1/${{ git.semver_current }}/g' setup.py
               - uses: actions/pythonPush
                 with:
                   pythonBinary: python3
                   package: quicksample
-                  version: "0.0.1"
+                  version: ${{ git.semver_current }}
                   wheel: "true"
           PromoteAndRelease:
             needs: [Debian-Job, Python-Job, Helm-Job]
